# VLP-Lab

./: .gitignore  alsPositioning.ipynb  cameraPositioning.ipynb  checkPhone.ipynb  designWave.ipynb  pyproject.toml  simplePeakCheck.ipynb
given_codes/: als_analysis.ipynb  analysis_function.py  data_formatting.py  fft_func.py  functions.py  pathlist.py  rolling_shutter_effect_analysis.ipynb
old/: compare.ipynb  peakCheck.ipynb  phoneFloorImg.ipynb
wave/: cam12.txt  cam15.txt  cam2.txt  cam5.txt  cam8.txt  mixals100cam2.txt  mixals101cam5.txt  mixals103cam8.txt  mixals104cam12.txt  mixbad.txt
