[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["ange0 <ankomoja927@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.5"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
